# documenya

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/api/: auth.py  dependencies.py  documents.py  users.py
app/core/: config.py  constants.py  logging.py  security.py
app/db/: models.py  session.py
app/exceptions/: auth.py  base.py  document.py  handlers.py
app/models/: document.py  user.py
app/repositories/: base_repository.py  document_repository.py  user_repository.py
app/schemas/: auth.py  document.py  query.py  types.py  user.py
app/services/: auth_service.py  document_parser_service.py  document_service.py  file_validation_service.py  storage_service.py
migrations/: env.py
migrations/versions/: 9d0b176016c1_add_document_status.py  ad7315ba7350_add_document_processing_error.py  b146f94b588d_add_document_content.py  d0cda0f78ee3_add_document_status.py  edb11c9e3e0d_initial_tables.py
