[project]
name = "documenya"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "bcrypt>=5.0.0",
    "binary>=1.0.2",
    "fastapi>=0.139.2",
    "passlib>=1.7.4",
    "psycopg>=3.3.4",
    "pydantic-settings>=2.14.2",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.51",
    "sqlmodel>=0.0.39",
    "uvicorn>=0.51.0",
]
