[project]
name = "documenya"
version = "0.1.0"
description = "AI-powered document chat API with RAG."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "uvicorn[standard]",

    "sqlalchemy>=2.0",
    "asyncpg",
    "psycopg[binary]",
    "alembic",

    "pydantic>=2",
    "pydantic-settings",

    "pwdlib[argon2]",

    "python-jose[cryptography]",

    "python-multipart",

    "aiofiles",

    "greenlet"
]


[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",

    "ruff",
    "mypy",

    "pre-commit",

    "types-python-jose"
]


[tool.ruff]
line-length = 88
target-version = "py312"


[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B"
]